syntax = "proto3";
option go_package = "DSMA4/grpc/proto";


// Declare messages
message Request {
  int32 lamportTimestamp = 1;
  int32 id = 2; 
}

message Response {
  int32 lamportTimestamp = 1;
  int32 idFromRespondee = 2; 
}

message TimeMessage {
    int32 lamportTimestamp = 1; 
}

// Declare gRPC services
service UserServer {
  rpc RequestAccess (Request) returns (TimeMessage) {};
  rpc GrantAccess (Response) returns (TimeMessage) {};
}
